; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_vividas.c_recover_key.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_vividas.c_recover_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.recover_key.plaintext = private unnamed_addr constant [8 x i8] c"SB\00\00\00\00\00\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @recover_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recover_key(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [8 x i8], align 1
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = bitcast [8 x i8]* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %6, i8* align 1 getelementptr inbounds ([8 x i8], [8 x i8]* @__const.recover_key.plaintext, i32 0, i32 0), i64 8, i1 false)
  %7 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %8 = getelementptr inbounds i8, i8* %7, i64 2
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @put_v(i8* %8, i32 %9)
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @AV_RL32(i8* %11)
  %13 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %14 = call i32 @AV_RL32(i8* %13)
  %15 = xor i32 %12, %14
  ret i32 %15
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @put_v(i8*, i32) #2

declare dso_local i32 @AV_RL32(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
